deploy/basic-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-bot
  template:
    metadata:
      labels:
        app: basic-bot
    spec:
      containers:
        - name: basic-bot
          image: basicbotacr.azurecr.io/basic-bot:ingress-v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: basic-bot
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: basic-bot
