deploy/basic-bot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-bot-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - zhijiebasicbot.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: zhijiebasicbot.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic-bot
            port:
              number: 80
      - path: /api/messages
        pathType: Prefix
        backend:
          service:
            name: basic-bot
            port:
              number: 80
